--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,49 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <h1>Create a Basketball Team!</h1>
+   
+   <form action ="/newteam" method="post">
+      <p>
+        <label for="name">Team Name:
+          <input type="text" name="team_name" id="name">
+        </label> 
+      </p>
+      <p>
+        <label for="coach">Coach:
+          <input type="text" name="coach" id="coach">
+        </label> 
+      </p>
+      <p>
+        <label for="guard">Point Guard:
+          <input type="text" name="point_guard" id="guard">
+        </label> 
+      </p>
+      <p>
+        <label for="shooting">Shooting Guard:
+          <input type="text" name="shooting_guard" id="shooting">
+        </label> 
+      </p>
+      <p>
+        <label for="foward">Small Foward:
+          <input type="text" name="small_foward" id="foward">
+        </label> 
+      </p>
+      <p>
+        <label for="power">Power Foward:
+          <input type="text" name="power_foward" id="power">
+        </label> 
+      </p>
+      <p>
+        <label for="center">Center:
+          <input type="text" name="center" id="center">
+        </label> 
+      </p>
+      
+      
+      <input id="button" type="submit">
+   </form>
+  
  </body>
 </html>
 
