--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,10 +7,10 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    
-   <form action ="/newteam" method="post">
+   <form action ="/team" method="POST">
       <p>
         <label for="name">Team Name:
-          <input type="text" name="team_name" id="name">
+          <input type="text" name="name" id="name">
         </label> 
       </p>
       <p>
@@ -20,32 +20,32 @@
       </p>
       <p>
         <label for="guard">Point Guard:
-          <input type="text" name="point_guard" id="guard">
+          <input type="text" name="pg" id="guard">
         </label> 
       </p>
       <p>
         <label for="shooting">Shooting Guard:
-          <input type="text" name="shooting_guard" id="shooting">
+          <input type="text" name="sg" id="shooting">
         </label> 
       </p>
       <p>
         <label for="foward">Small Foward:
-          <input type="text" name="small_foward" id="foward">
+          <input type="text" name="sf" id="foward">
         </label> 
       </p>
       <p>
         <label for="power">Power Foward:
-          <input type="text" name="power_foward" id="power">
+          <input type="text" name="pf" id="power">
         </label> 
       </p>
       <p>
         <label for="center">Center:
-          <input type="text" name="center" id="center">
+          <input type="text" name="c" id="center">
         </label> 
       </p>
       
       
-      <input id="button" type="submit">
+      <input id="Submit" type="submit">
    </form>
   
  </body>
