--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,20 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+ <h1>Basketball Team! </h1>
+  Team Name: <%= @name %>
+  <br><br/>
+  Coach: <%= @coach %>
+  <br><br/>
+  Point Guard: <%=@pg %>
+  <br><br/>
+  Power Forward: <%=@pf %>
+  <br><br/>
+  Shooting Guard: <%=@sg %>
+  <br><br/>
+  Small Forward: <%=@sf %>
+  <br><br/>
+  Center: <%=@c %>
  </body>
 </html>
 
