--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+    <h1>Team Name: <%= @team[0] %></h1>
+    <h2>Coach: <%= @team[1] %></h2>
+    <p>Point Guard: <%= @team[2] %></p>
+    <p>Shooting Guard: <%= @team[3] %></p>
+    <p>Power Forward: <%= @team[4] %></p>
+    <p>Small Forward: <%= @team[5] %></p>
+    <p>Center: <%= @team[6] %></p>
  </body>
 </html>
 
