--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+ 	<h1>Team Name: <%=@team%></h1>
+ 	<h2>Coach: <%=@coach%></h2>
+ 	<h2>Point Guard: <%=@pguard%></h2>
+ 	<h2>Shooting Guard: <%=@sguard%></h2>
+ 	<h2>Small Forward: <%=@sforward%> </h2>
+ 	<h2>Power Forward: <%=@pforward%></h2>
+ 	<h2>Center: <%=@center%></h2>
  </body>
 </html>
 
