--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,36 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+  <form action="/team" method="POST">
+    <p>
+      <label>Team name:</label>
+      <input type="text" name="name" id="name">
+    </p>
+    <p>
+      <label>Coach:</label>
+      <input type="text" name="coach" id="coach">
+    </p>
+    <p>
+      <label>Point Guard:</label>
+      <input type="text" name="pg" id="pg">
+    </p>
+    <p>
+      <label>Shooting Guard:</label>
+      <input type="text" name="sg" id="sg">
+    </p>
+    <p>
+      <label>Power Forward:</label>
+      <input type="text" name="pf" id="pf">
+    </p>
+    <p>
+      <label>Small Forward:</label>
+      <input type="text" name="sf" id="sf">
+    </p>
+    <p>
+      <label>Center:</label>
+      <input type="text" name="c" id="c">
+    </p>
+    <input type="submit" value="Submit" id="submit">
+  </form>
  </body>
 </html>
-
-
