--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,24 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+    <h1>Create A Basketball Team!</h1>
+    <form method="POST" action="/team">
+        <p><label for="name">Team Name: </label>
+        <input type="text" name="name" placeholder="Team Name"/></p>
+        <p><label for="coach">Coach: </label>
+        <input type="text" name="coach" placeholder="Coach"/></p>
+        <p><label for="pg">Point Guard: </label>
+        <input type="text" name="pg" placeholder="Point Guard"/></p>
+        <p><label for="sg">Shooting Guard: </label>
+        <input type="text" name="sg" placeholder="Shooting Guard"/></p>
+        <p><label for="sf">Small Forward: </label>
+        <input type="text" name="sf" placeholder="Small Forward"/></p>
+        <p><label for="pf">Power Forward: </label>
+        <input type="text" name="pf" placeholder="Power Forward"/></p>
+        <p><label for="c">Center: </label>
+        <input type="text" name="c" placeholder="Center"/></p>
+        <p><input type="submit" id="Submit" /></p>
+    </form>
  </body>
 </html>
 
