--- a/views/team.erb
+++ b/views/team.erb
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <title>Basketball Team</title>
  </head>
- <body>
- 
-
-
- </body>
-</html>
+    <body>
+    <h1>Team Name: <%= @name %></h1>
+    <h2>Coach: <%= @coach %></h2>
+    <h3>Point Guard: <%= @pg %></h3>
+    <h4>Shooting Guard: <%= @sg %></h4>
+    <h5>Small Forward: <%= @sf %></h5>
+    <h6>Power Forward: <%= @pf %></h6>
+    <h7>Center: <%= @center %></h7>
+    </body>
+ </html>
 
 
