--- a/views/team.erb
+++ b/views/team.erb
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <! –– This erb file displays what the user submits -->
 <html>
  <head>
   <meta charset="UTF-8">
   <title>Basketball Team</title>
  </head>
     <body>
-    <h1>Team Name: <%= @name %></h1>
+    <h1>Team Name: <%= @name %></h1> <! –– In each 'h' tag we set the instance variables that equalled to the params in the controller -->
     <h2>Coach: <%= @coach %></h2>
-    <h3>Point Guard: <%= @pg %></h3>
-    <h4>Shooting Guard: <%= @sg %></h4>
-    <h5>Small Forward: <%= @sf %></h5>
-    <h6>Power Forward: <%= @pf %></h6>
-    <h7>Center: <%= @center %></h7>
+    <h2>Point Guard: <%= @pg %></h2>
+    <h2>Shooting Guard: <%= @sg %></h2>
+    <h2>Small Forward: <%= @sf %></h2>
+    <h2>Power Forward: <%= @pf %></h2>
+    <h2>Center: <%= @center %></h2>
     </body>
  </html>
 
