--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,40 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+     <h1>Create new team</h1>
+     <form class="team-form" action="/team" method="post">
+         <div>
+             <label for="team-name">Team Name</label>
+             <input id="team-name" type="text" name="name">
+
+         </dv>
+         <div>
+             <label for="coach">Coach</label>
+             <input id="coach" type="text" name="coach">
+         </div>
+         <div>
+             <label for="pg">Point Guard</label>
+             <input id="pg" type="text" name="pg">
+         </div>
+         <div>
+             <label for="sg">Shooting Guard</label>
+             <input id="sg" type="text" name="sg">
+         </div>
+         <div>
+             <label for="pf">Power Forward</label>
+             <input id="pf" type="text" name="pf">
+         </div>
+         <div>
+             <label for="sf">Small Forward</label>
+             <input id="sf" type="text" name="sf">
+         </div>
+         <div>
+             <label for="c">Center</label>
+             <input id="c" type="text" name="c">
+         </div>
+         <div>
+             <input type="submit" value="Submit">
+         </div>
+     </form>
  </body>
 </html>
-
-
