--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,12 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+     <h1>Team Name: <%= params[:name] %></h1>
+     <h1>Coach: <%= params[:coach] %></h1>
+     <p>Point Guard: <%= params[:pg] %></p>
+     <p>Shooting Guard: <%= params[:sg] %></p>
+     <p>Small Forward: <%= params[:sm] %></p>
+     <p>Power Forward: <%= params[:pf] %></p>
+     <p>Center: <%= params[:c] %></p>
  </body>
 </html>
-
-
