--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,18 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+    <p>Team Name: <%= params[:name] %></p>
+    <br>
+    <p>Coach: <%= params[:coach] %></p>
+    <br>
+    <p>Point Guard: <%= params[:pg] %></p>
+    <br>
+    <p>Shooting Guard: <%= params[:sg] %></p>
+    <br>
+    <p>Power Forward: <%= params[:pf] %></p>
+    <br>
+    <p>Center: <%= params[:c] %></p>
+    <br>
  </body>
 </html>
 
